--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
   <head>
     <meta charset="UTF-8">
-    <title>SEEK for android by sunyer</title>
+    <title>SEEK for Android</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
@@ -15,9 +15,9 @@
       <div><img src="img/ic_SEEK.png" style="width:200px;">
       <h1 class="project-name">SEEK for android</h1></div>
       <h2 class="project-tagline"></h2>
-      <a href="https://github.com/seek-for-android" class="btn">View on GitHub</a>
-      <a href="https://github.com/seek-for-android/SmartcardService/wiki" class="btn"> Wiki</a>
-      <a href="https://docs.google.com/file/d/0B63jMJOYc2l3UXJFWVdaQUlyeFk/edit" class="btn">  Download Last Version </a>
+      <a href="https://github.com/seek-for-android" class="btn">View us on GitHub</a>
+      <a href="https://github.com/seek-for-android/pool/wiki" class="btn">Browse our Wiki</a>
+      <a href="https://drive.google.com/file/d/0B63jMJOYc2l3SjZXSThtMkprNEk/view" class="btn">Download Latest Version </a>
     </section>
 
     <section class="main-content">
@@ -29,9 +29,9 @@
 
 <ul>
 <li>
-<strong>New version available:</strong> Smartcard API 3.2.1 (based on Android 4.4 KitKat) is already available for download <a href="https://docs.google.com/file/d/0B63jMJOYc2l3UXJFWVdaQUlyeFk/edit">here</a>.</li>
+<strong>Smartcard API v4.0.0</strong> (based on Android 5.0 Lollipop) is already available for <a href="https://drive.google.com/file/d/0B63jMJOYc2l3SjZXSThtMkprNEk/view">download</a>.</li>
 <li>
-<strong>Downloads section moved:</strong> please notice that new files will be uploaded to Google Drive as Google is no longer supporting file hosting on Google Groups.</li>
+<strong>MSC Smartcard Service v4.0.0</strong> (based on Android 5.0 Lollipop and overcoming the O_DIRECT issue) is already available for <a href="https://drive.google.com/file/d/0B63jMJOYc2l3R0FqUDl6eS1UTEk/view">download</a>.</li>
 </ul>
 
 <h2>
@@ -54,7 +54,7 @@ We welcome any kind of contribution (discussions, issues, feature requests, docu
 Please do not use comments on Wiki pages for support but only the mailing list. Wiki page comments are for discussing/extending the documenta</p>
 
       <footer class="site-footer">
-        <span class="site-footer-owner"><a href="https://github.com/sunyer/seek-for-android.github.io">SEEK for android</a> is maintained by <a href="https://github.com/seek-for-android">seek-for-android</a>.</span>
+        <span class="site-footer-owner"><a href="https://github.com/seek-for-android/">SEEK for Android</a> open source project is maintained by <a href="http://www.gi-de.com/">Giesecke & Devrient GmbH</a>.</span>
 
         
       </footer>
